--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,6 @@
 	<classpathentry kind="src" path="resouce/spring"/>
 	<classpathentry kind="src" path="resouce/mapper"/>
 	<classpathentry excluding="spring/|mapper/|mybatis/" kind="src" path="resouce"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/asm-3.3.jar"/>
@@ -59,6 +54,10 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/pagehelper-5.0.0-rc.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/zxing3.3.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/barcode4j-light.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
